tests/fixtures/negative/sleeping_loop_without_wake_source.wrela
// expect: SEM0044: EventSleepPolicy executor Worker has no wake source
module negative.sleeping_loop_without_wake_source

module machine.x86_64.cpu_state
data SlotIdentity { label: StringLiteral }
data ExecutorSlot { id: U64 }
class ExecutorRegistry { fn claim(self, identity: SlotIdentity) -> ExecutorSlot { return ExecutorSlot(id = 0) } }

module machine.x86_64.executor_loop
class EventSleepPolicy {}

module negative.sleeping_loop_without_wake_source.app
use { ExecutorRegistry, ExecutorSlot, SlotIdentity } from machine.x86_64.cpu_state
use { EventSleepPolicy } from machine.x86_64.executor_loop

executor Worker {
    slot: ExecutorSlot
    loop: EventSleepPolicy
    start fn run(self) -> never { while true {} }
}

image Bad {
    transitions { delegated_hardware -> owned_hardware }
    phase delegated_hardware(hardware: DelegatedHardware) -> OwnedHardware { return hardware.exit_to_owned_hardware() }
    phase owned_hardware(hardware: OwnedHardware) -> never {
        let slot = ExecutorRegistry().claim(identity = SlotIdentity(label = "worker"))
        let worker = Worker(slot = slot, loop = EventSleepPolicy())
        while true {}
    }
}
